# smartjob

./: .importlinter  Makefile  README.md  coucou.py  demo.py  demo10.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: .pages
docs/explanation/: how-it-works.md
docs/reference/: .pages  cli.md.template  env.md
docs/reference/api/: .pages  inputs.md  jobs.md  misc.md  service.md
docs/reference/cli/: .pages  cli.md.template
docs/tutorial/: quickstart.md.template  quickstart1.py  quickstart2.py
docs/tutorials/: local_script.py  local_script2.py  quickstart.md.template  quickstart1.py  quickstart2.py  quickstart3.py  quickstart4.py
smartjob/: __init__.py
smartjob/app/: exception.py  execution.py  executor.py  file_uploader.py  input.py  job.py  retry.py  storage.py  timeout.py  utils.py
smartjob/infra/adapters/executor/: cloudbatch.py  cloudrun.py  docker.py  dummy.py  gcp.py  vertex.py
smartjob/infra/adapters/file_uploader/: gcs.py
smartjob/infra/adapters/storage/: docker.py  dummy.py  gcs.py
smartjob/infra/controllers/: lib.py
smartjob/infra/controllers/cli/: cli.py  cloudrun.py  common.py  main.py  utils.py  vertex.py
tests/app/: test_execution.py  test_executor.py  test_input.py
tests/app/data/: python_script.py
trash/: main.py  main2.py  main3.py
