[tool.poetry]
name = "smartjob"
version = "0.0.1"
description = "Little async python library for dealing with GCP/Cloud Run Jobs and GCP/VertexAI CustomJobs"
authors = ["Fabien MARTY <fab@fabien-marty.dev>"]
readme = "README.md"
packages = [{ include = "smartjob" }]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-run = "^0.10.8"
google-cloud-aiplatform = "^1.60.0"
setuptools = "^72.1.0"
stlog = "^0.2.0"
rich = "^13.7.1"
typer = "^0.12.3"
tenacity = "^9.0.0"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.11.1"
import-linter = "^2.0"
mkdocstrings = { extras = ["python"], version = "^0.25.2" }
mkdocs-material = "^9.5.31"
mkdocs-awesome-pages-plugin = "^2.9.3"
jinja-tree = "^0.6.0"

pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
smartjob = 'smartjob.infra.controllers.cli.main:cli'

[tool.mypy]
exclude = ['^site']

[[tool.mypy.overrides]]
module = ["docker"]
ignore_missing_imports = true
